# bioeq

./: 404.html  CHANGELOG.md  README.html  README.md  Untitled.ipynb  bioeq.html  index.html  mkdocs.yml  objects.inv  old_pyproject  pyproject.toml  search.js  tox.ini
.github/workflows/: github-actions.yaml  mkdocs.yaml  pdoc-documentation-site.yaml  poetry-actions.yaml  uv-actions.yaml
bioeq/: Crossover2x2.py  __init__.py  bioeq.py  crossover2x2.py  replicate_crossover.py
docs/: CHANGELOG.md  DOCUMENTATION.md  README.md  index.md
docs/development/: DOCUMENTATION.md
docs/notes/: BE_NOTES.md
docs/requirements/: functional_requirements.md
docs/specifications/: algorithmic_specifications.md
info/: CHANGELOG.md  DOCUMENTATION.md  WORKFLOW_DOCUMENTATION.md  concise_BE_NOTES.md
notebooks/: develop_basic_be_funcs.ipynb
notes/: concise_BE_NOTES.md
references/: regulatory_references.md
search/: search_index.json
simdata/: README.md  adpp.sas7bdat  be_R_package_simdata.csv  bioeq_simdata_1.csv  bioeq_simdata_1.py  bioeq_simdata_2.csv  bioeq_simdata_2.py  clean_simdata1.ipynb  df_main.Rds  simulation_data_generator.py
simdata/simdata/: crossover_simdata.csv  parallel_simdata.csv
src/bioeq/: __init__.py  bioeq.py  load_test_data.py
tests/: __init__.py  test_crossover2x2.py  test_crossover2x2_validations.py  test_parallel.py  test_replicate_crossover.py  test_scratch.py  test_validation.py
validation/: traceability_matrix.md  validation_strategy.md
