[project]
name = "bioeq"
version = "0.1.0"
description = "A Python package for performing bioequivalence calculations and analysis."
readme = "README.md"
authors = [
    { name = "Shaun Porwal", email = "shaun.porwal@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.0",
    "pandas>=2.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.3.4",
    "notebook>=7.3.2",
]
