[tool.poetry]
name = "bioeq"
version = "0.1.0"
description = "A Python package for performing bioequivalence calculations and analysis."
authors = ["Shaun Porwal <shaun.porwal@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
