[project]
name = "bioeq"
version = "0.1.4.1"
description = "A Python package for performing bioequivalence calculations and analysis."
authors = [
    {name = "Shaun Porwal", email = "shaun.porwal@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.18.0",
    "scipy>=1.15.0",
    "numpy>=2.2.1",
    "statsmodels>=0.14.4",
    "pyarrow>=19.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "black>=24.10.0",
    "pathlib>=1.0.1",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "notebook>=7.3.2",
    "tomli>=2.2.1",
    "toml>=0.10.2",
]

[project.scripts]
bioeq = "bioeq.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
